Add some tests again
